# tensorflow-lite

./: .gitignore  CMakeLists.txt  LICENSE
src/: allocation.cc  allocation.h  allocation_test.cc  arena_planner.cc  arena_planner.h  arena_planner_subgraph_test.cc  arena_planner_test.cc  array.cc  array.h  array_test.cc  builtin_op_data.h  context.h  context_util.h  create_op_resolver.h  create_op_resolver_with_selected_ops.cc  error_reporter.h  external_cpu_backend_context.cc  external_cpu_backend_context.h  graph_info.cc  graph_info.h  graph_info_test.cc  interpreter.h  interpreter_builder.h  interpreter_test.cc  interpreter_test_util.h  logger.cc  memory_planner.h  minimal_logging.cc  minimal_logging_android.cc  minimal_logging_default.cc  minimal_logging_ios.cc  minimal_logging_test.cc  mmap_allocation.cc  mmap_allocation_disabled.cc  model.h  model_flex_test.cc  model_xnnpack_test.cc  mutable_op_resolver.cc  mutable_op_resolver.h  mutable_op_resolver_test.cc  (+36 more)
src/acceleration/configuration/: configuration.proto  (+19 more)
src/async/: backend_async_kernel_interface.cc  backend_async_kernel_interface.h  backend_async_kernel_interface_test.cc
src/c/: builtin_op_data.h  c_api.h  c_api_experimental.h  c_api_for_testing.cc  c_api_for_testing.h  c_api_internal.h  c_api_opaque.h  c_api_opaque_internal.cc  c_api_opaque_internal.h  c_api_opaque_internal_test.cc  c_api_signature_runner_test.cc  c_api_types.h  c_test.c  common.h  common_internal.cc  common_internal.h  test_util.cc
src/cmake/: DownloadPThreadPool.cmake
src/core/: README.md  create_op_resolver_with_builtin_ops.cc  interpreter.cc  interpreter.h  interpreter_builder.cc  interpreter_builder.h  interpreter_experimental.cc  model.h  model_builder.cc  model_builder.h  model_test.cc  signature_runner.cc  signature_runner.h  signature_runner_test.cc  subgraph.cc  subgraph.h  subgraph_test.cc
src/delegates/: delegate_test.cc  delegate_test_util.cc  delegate_test_util.h  interpreter_utils.cc  interpreter_utils.h  interpreter_utils_test.cc  opaque_delegate_test.cc  serialization.cc  serialization.h  serialization_test.cc  telemetry.cc  telemetry.h  telemetry_test.cc  utils.cc  utils.h  utils_test.cc
src/ios/: TensorFlowLiteC.h  build_frameworks.sh
src/kernels/: CMakeLists.txt  acceleration_test_util.cc  acceleration_test_util_internal.cc  acceleration_test_util_internal_test.cc  activations.cc  activations_test.cc  add.cc  add_n.cc  add_n_test.cc  add_n_test_common.h  add_test.cc  arg_min_max.cc  arg_min_max_test.cc  assign_variable.cc  atan2.cc  atan2_custom.cc  atan2_custom_test.cc  atan2_test.cc  audio_spectrogram.cc  audio_spectrogram_test.cc  basic_rnn.cc  basic_rnn_test.cc  batch_matmul.cc  batch_matmul_test.cc  batch_to_space_nd.cc  batch_to_space_nd_test.cc  bidirectional_sequence_lstm.cc  bidirectional_sequence_lstm_test.cc  bidirectional_sequence_rnn.cc  bidirectional_sequence_rnn_test.cc  bitcast.cc  bitcast_test.cc  bitwise_xor.cc  bitwise_xor_test.cc  broadcast_args.cc  broadcast_args_test.cc  broadcast_to.cc  broadcast_to_test.cc  bucketize.cc  bucketize_test.cc  (+305 more)
src/nnapi/: NeuralNetworksShim.h  nnapi_handler.cc  nnapi_handler.h  nnapi_handler_test.cc  nnapi_implementation.cc  nnapi_implementation.h  nnapi_implementation_disabled.cc  nnapi_implementation_test.cc  nnapi_util.cc  nnapi_util.h
src/profiling/: atrace_profiler.cc  atrace_profiler.h  atrace_profiler_test.cc  buffered_profiler.h  memory_info.cc  memory_info_test.cc  memory_usage_monitor.cc  memory_usage_monitor.h  memory_usage_monitor_test.cc  noop_profiler.h  platform_profiler.cc  platform_profiler.h  profile_buffer.cc  profile_buffer.h  profile_buffer_test.cc  profile_summarizer.cc  profile_summarizer.h  profile_summarizer_test.cc  profile_summary_formatter.cc  profile_summary_formatter_test.cc  profiler.h  profiler_test.cc  root_profiler.cc  root_profiler.h  root_profiler_test.cc  signpost_profiler.h  signpost_profiler.mm  subgraph_tensor_profiler.cc  subgraph_tensor_profiler.h  subgraph_tensor_profiler_test.cc  time.cc  time_test.cc
src/python/: convert_file_to_c_source_test.sh  interpreter.py  lite_v2_test.py
src/schema/: schema_conversion_utils.cc  schema_conversion_utils.h  schema_utils.cc  schema_utils.h  schema_v3a.fbs  schema_v3b.fbs  schema_v3c.fbs
src/testing/: generate_examples.py  generate_examples_lib.py  generate_testspec.cc  generate_testspec_test.cc  generated_examples_zip_test.cc  init_tensorflow.cc  join.h  join_test.cc  message.cc  message_test.cc  nnapi_example.cc  parse_testdata.cc  parse_testdata.h  result_expectations.cc  result_expectations.h  selective_build_test.cc  split.cc  split.h  split_test.cc  string_util.cc  string_util_wrapper.cc  test_runner_test.cc  tf_driver.cc  tf_driver.h  tf_driver_test.cc  tflite_diff_example_test.cc  tflite_diff_flags.h  tflite_diff_util.cc  tflite_diff_util.h  tflite_driver.cc  tflite_driver.h  tflite_driver_test.cc  tokenize.cc  tokenize_test.cc  util.h
src/toco/: allocate_transient_arrays.cc  allocate_transient_arrays.h  args.cc  args.h  dump_graphviz.cc  dump_graphviz.h  export_tensorflow.cc  export_tensorflow.h  format_port.h  import_tensorflow.cc  import_tensorflow.h  import_tensorflow_test.cc  model.h  model_cmdline_flags.cc  model_cmdline_flags.h  model_cmdline_flags_test.cc  model_flags.proto  tensorflow_util.cc  tensorflow_util.h  toco.cc  toco_cmdline_flags.cc  toco_cmdline_flags.h  toco_cmdline_flags_test.cc  toco_convert.cc  toco_convert.h  toco_convert_test.cc  toco_flags.proto  toco_graphviz_dump_options.cc  toco_port.cc  toco_port.h  toco_port_test.cc  toco_tooling.cc  toco_tooling.h  tooling_util.cc  tooling_util.h  tooling_util_test.cc
src/tools/: command_line_flags.cc  command_line_flags_test.cc  flatbuffer_utils.py  gen_op_registration.cc  gen_op_registration.h  gen_op_registration_main.cc  gen_op_registration_test.cc  list_flex_ops.cc  list_flex_ops.h  list_flex_ops_main.cc  list_flex_ops_no_kernel.cc  list_flex_ops_test.cc  model_loader.cc  model_loader.h  model_loader_test.cc  tool_params.cc  tool_params_test.cc  utils.cc  utils.h  verifier.h  verifier_internal.h
(+2350 files in other folders)
